# data-driven-fpl

./: .gitignore  .pre-commit-config.yaml  Dockerfile.flow  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  postCreateCommand.sh
.github/workflows/: lint-and-test-pipeline.yml  linttest.yml  pytestcov.yml
.tours/: convert-csv-to-parquet.tour  transform-dataset.tour  wp-3-transformation.tour  wp-3-transformations.tour
config/: config.yaml
data_desc/: data_desc.json  data_desc_schema.json
docs/: Contribute.md
fpl/: __init__.py  __main__.py  cli.py  main.py
fpl/data/: __init__.py  blob_importer.py  convert_data.py  data_converter.py  get_data.py  make_parquet.py
fpl/data_import/: blob_importer.py
fpl/pipeline/: data_pipeline.py  experiment.py
fpl/transform/: transformations.py
fpl/utils/: config.py  configs.py  helpers.py  paths.py
notebooks/: GETTING_STARTED.md  Transform_data.md
test_data/test_interim/: test_elements.csv  test_teams.csv
test_data/test_interim/test_parquet/code=118748/: 70bd8781-651f-48a7-98ab-d335dc30c26a-0
test_data/test_interim/test_parquet/code=184341/: 70bd8781-651f-48a7-98ab-d335dc30c26a-0
test_data/test_raw/: test_file_1.json  test_file_2.json
tests/: __init__.py  conftest.py  test_fpl.py
tests/cli/: test_parquet_cli.py
tests/data/: test_data_converter.py  test_make_parquet.py
tests/data_import/: test_blob_importer.py
tests/transform/: test_transformations.py
tests/utils/: test_helpers.py
