[tool.poetry]
name = "fpl"
version = "0.1.0"
description = "A data driven approach to fantasy football"
authors = ["AI Champions"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/acntech/data-driven-fpl"

[tool.poetry.dependencies]
azure-storage-blob = "^12.8.1"
python-dotenv = "^0.19.0"
tqdm = "^4.62.2"
python = ">=3.8,<3.11"
PyYAML = "^5.4.1"
click = "^8.0.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
black = "^21.8b0"
isort = "^5.9.3"
coverage = "^5.5"
pre-commit = "^2.15.0"
pydocstyle = "^6.1.1"
notebook = "^6.4.3"
jupytext = "^1.12.0"
jupyter-contrib-nbextensions = "^0.5.1"
rope = "^0.22.0"

[tool.poetry.scripts]
fantasy = "fpl.__main__:start_script"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
